temp/objects/Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Agenda</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agenda_Schedule_date_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Start_Date__c  =  null, End_Date__c = null)</errorConditionFormula>
        <errorMessage>Agenda Schedule date not blank</errorMessage>
    </validationRules>
</CustomObject>